Migrate code to Java 6 level
GitOrigin-RevId: efd4f357775e6db9238adce3d1e190ef06323adb